--- a/stylle.css
+++ b/stylle.css
@@ -7,6 +7,7 @@ body{
 font-family: 'Open Sans', sans-serif;
 text-align: center;
 align-items: center;
+height: 100%;
 }
 main{
   width: 626px;
@@ -66,10 +67,9 @@ p span, a {
   margin: 0 16px;
 
 }
-#foote, img{
+#footer, img{
 display: block;
 width: 100%;
 height: 104px;
 margin-top: 40.83px;
-
 }
